# cxp-lifecycle-cli

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: bump-version.yml
cli/: .env.example  README.md  pyproject.toml
cli/src/cli/: commands.py  validators.py
cli/src/cli/api/: function.py
cli/src/cli/api/ruleset/: .spectral.yaml  api-insights-openapi-ruleset.js  completeness.js  documentation.js  package-lock.json
cli/src/cli/api/ruleset/functions/: checkPatchSuccess.js
cli/src/cli/api/ruleset/util/: isPascalOrCamelCase.js
cli/src/cli/helpers/: api_client.py  custom_typer.py  errors.py  file.py  prompts.py
cli/src/cli/init/: init.py
scripts/: bump_version.py
src/cli/: _version.py  commands.py  config.py  platform_services.json  settings.py  validators.py
src/cli/aifabric/: aifabric.py
src/cli/api/: api.py  helpers.py
src/cli/api/ruleset/: contract.js  package.json
src/cli/api/ruleset/functions/: checkPutSuccess.js  deepCheck.js  ensureErrorConsistency.js  ensureFields.js  ensureValue.js  multiVersion.js  operationIdCheck.js
src/cli/api/ruleset/util/: getVersion.spec.js
src/cli/applications/: applications.py
src/cli/cancel/: cancel.py
src/cli/datafabric/: connector.py  datafabric.py
src/cli/deploy/: deploy.py
src/cli/deployments/: deployments.py
src/cli/dry_run/: dry_run.py
src/cli/helpers/: api_client.py  cache_manager.py  errors.py  file.py  path_utils.py  prompts.py  status.py
src/cli/init/: init.py
src/cli/ms/: ms.py
src/cli/register/: register.py
src/cli/validate/: validate.py
src/lifecycle_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_ms_commands.py  test_windows_compatibility.py  test_windows_simulation.py
tests/helpers/: test_path_utils.py
